# ProPredict

./: pyproject.toml  readme.md  requirements.txt
.github/workflows/: black.yaml  pylint.yaml
data/: NBA_scoring.csv  Team_Data - NBA_scoring.csv  Team_record.csv  players.csv  test1.csv
src/: .bash_history  .sqlite_history  LMresults.py  RFresults.py  cluster.py  covid.csv  linear.py  linearregression.py  list.py  main.py  new_graph.py  randomforest.py  real_data.csv  requirements.txt  streamlit.py  test.py  test_file.py  test_file1.py  thesis_data.tsv
src/pages/: Data Summary.py  Hello.py  Interactive Plots.py  Predictive Modeling.py
