[tool.poetry]
name = "ProPredict"
version = "0.1.0"
description = ""
authors = ["Liam Black <blackl@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.0.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
plotly = "^5.3.1"
numpy = "^1.21.2"
scikit-learn = "^1.2.2"
Pillow = "^8.4.0"
scipy = "^1.7.1"

[tool.poetry.scripts]
propredict = "streamlit run main.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"